Fix alignment on some fields in asevet content type.

--- a/css/style.css.less
+++ b/css/style.css.less
@@ -109,6 +109,8 @@ body:not(.has-sidebar) #content {
 	.field-name-embed,
 	.views-field,
 	.field-name-field-presenter,
+	.field-name-field-intended-audience,
+	.field-name-field-file,
 	#block-views-course-promotions-block-2,
 	.field-type-taxonomy-term-reference:not(.form-wrapper),
 	.node-tutorial .meta.submitted,
@@ -144,6 +146,8 @@ body:not(.has-sidebar) #content {
 		.field-name-field-location,
 		.field-name-body,
 		.field-name-field-presenter,
+		.field-name-field-intended-audience,
+		.field-name-field-file,
 		#block-views-course-promotions-block-2,
 		.field-type-taxonomy-term-reference:not(.form-wrapper),
 		.node-tutorial .meta.submitted,
